@@ -1,4 +1,4 @@
-.TH VOIKKOHYPHENATE 1 "2009-01-03"
+.TH VOIKKOHYPHENATE 1 "2010-03-06"
 .SH NAME
 voikkohyphenate \- test program for Voikko hyphenator
 .SH SYNOPSIS
@@ -21,11 +21,6 @@ other than \-, all original characters of the hyphenated word are printed.
 Set
 .I n
 as the minimun length for words to hyphenate.
-.TP
-.BI intersect_compound_level= n
-Set
-.I n
-as the value of option VOIKKO_INTERSECT_COMPOUND_LEVEL.
 .TP
 .BI no_ugly_hyphenation= n
 .TP
