@@ -74,12 +74,10 @@ kuorma-allas.   kuor-ma-al-las.
 kuorma-allas.   kuor-ma-allas.
 talon.          talon.
 
-[no_ugly_hyphenation=1 intersect_compound_level=2]
+[no_ugly_hyphenation=1]
+# "hienosto" has a compound and non-compound analysis. The non-compound analysis is assumed to be correct.
 hienosto	hie-nos-to
-pöytähienosto	pöy-tä-hie-nos-to
-
-[no_ugly_hyphenation=1 intersect_compound_level=0]
-hienosto        hienos-to
+# If there is a compound analysis with two components and another with three components, do not guess which one is correct.
 pöytähienosto   pöy-tä-hienos-to
 
 [-s!]
